[package]
name = "dict"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
reqwest = { version = "0.11", features = ["blocking"] }
tokio = { version = "1", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
xml-rs = "0.8"
console = "0.15.2"
clap = { version = "4.5.49", features = ["derive"] }
quick-xml = { version = "0.38.3", features = ["serde", "serialize", "tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
